add code to finish exercises up through jQuery selectors

--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -7,9 +7,24 @@
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
 <body>
-<div>
+<section>
+    <h1 id="header1">I am very tired</h1>
+    <div>
+        <p class="paraDiv">This exists within a div. Neat, right?</p>
+    </div>
+    <div  style="border: red solid .5rem">
+        <label for="theList">The List of Things</label>
+        <ul id="theList">
+            <li class="codeup">Cheese</li>
+            <li class="codeup">Monoamine Oxidase Inhibitor</li>
+            <li class="codeup">Lithium Iron Phosphate Battery</li>
+            <li class="codeup">3dfx Voodoo 3</li>
+            <li class="codeup">Sandy Pants</li>
+        </ul>
+    </div>
 
-</div>
 
+</section>
+<script src="js/my-custom-javascript.js"></script>
 </body>
 </html>
