add code for konami exercise

--- a/konami.html
+++ b/konami.html
@@ -14,7 +14,24 @@
     <h1 class="col-4">Want extra lives?</h1>
     <h1 class="col">Input: ⬆ ⬆ ⬇ ⬇ ⬅ ➡ ⬅ ➡ 🅱️ 🅰️ <span id="enter">ENTER</span></h1>
 </section>
-
+<section class="d-none text-center" id="hiddenSnoop">
+    <h1>Too bad.. Ain't nothin' but a g-thang, baby...</h1>
+    <div class="d-flex justify-content-center row">
+        <div class="row justify-content-center">
+            <img class="resizeDiscoBall rotateDiscoBall180" src="pictures_and_stuff/discoball.gif" alt="Disco Ball">
+            <img class="resizeDiscoBall rotateDiscoBall180" src="pictures_and_stuff/discoball.gif" alt="Disco Ball">
+        </div>
+        <div class="row" style="width: 80%">
+            <div class="col mx-0 p-0">
+                <img id="snoopDogg" src="pictures_and_stuff/snoop.gif" alt="Snoop Dogg">
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <img class="resizeDiscoBall" src="pictures_and_stuff/discoball.gif" alt="Disco Ball">
+            <img class="resizeDiscoBall" src="pictures_and_stuff/discoball.gif" alt="Disco Ball">
+        </div>
+    </div>
+</section>
 <script src="js/konami.js"></script>
 </body>
 </html>
