--- a/konami.html
+++ b/konami.html
@@ -9,26 +9,29 @@
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <link href="css/konami.css" rel="stylesheet">
 </head>
-<body>
-<section class="d-flex justify-content-center row m-5" id="konamiCode">
-    <h1 class="col-4">Want extra lives?</h1>
-    <h1 class="col">Input: ⬆ ⬆ ⬇ ⬇ ⬅ ➡ ⬅ ➡ 🅱️ 🅰️ <span id="enter">ENTER</span></h1>
+<body style="height: 100%">
+<section class="d-flex justify-content-center align-items-center row m-5" id="konamiCode">
+    <h1 class="col-4 p-2" style="border: red solid 1px">Want extra lives?</h1>
+    <h1 class="col p-2" style="border: red solid 1px">Input: ⬆ ⬆ ⬇ ⬇ ⬅ ➡ ⬅ ➡ 🅱️ 🅰️ <span id="enter">ENTER</span></h1>
 </section>
 <section class="d-none text-center" id="hiddenSnoop">
-    <h1>Too bad.. Ain't nothin' but a g-thang, baby...</h1>
+    <h1>Too bad.</h1>
     <div class="d-flex justify-content-center row">
-        <div class="row justify-content-center">
-            <img class="resizeDiscoBall rotateDiscoBall180" src="pictures_and_stuff/discoball.gif" alt="Disco Ball">
-            <img class="resizeDiscoBall rotateDiscoBall180" src="pictures_and_stuff/discoball.gif" alt="Disco Ball">
-        </div>
+<!--        <div class="row justify-content-center">-->
+<!--            <img class="resizeDiscoBall rotateDiscoBall180" src="pictures_and_stuff/discoball.gif" alt="Disco Ball">-->
+<!--            <img class="resizeDiscoBall rotateDiscoBall180" src="pictures_and_stuff/discoball.gif" alt="Disco Ball">-->
+<!--        </div>-->
         <div class="row" style="width: 80%">
-            <div class="col mx-0 p-0">
+            <div class="col mx-0 pb-2">
                 <img id="snoopDogg" src="pictures_and_stuff/snoop.gif" alt="Snoop Dogg">
             </div>
         </div>
-        <div class="row justify-content-center">
-            <img class="resizeDiscoBall" src="pictures_and_stuff/discoball.gif" alt="Disco Ball">
-            <img class="resizeDiscoBall" src="pictures_and_stuff/discoball.gif" alt="Disco Ball">
+<!--        <div class="row justify-content-center">-->
+<!--            <img class="resizeDiscoBall" src="pictures_and_stuff/discoball.gif" alt="Disco Ball">-->
+<!--            <img class="resizeDiscoBall" src="pictures_and_stuff/discoball.gif" alt="Disco Ball">-->
+<!--        </div>-->
+        <div id="music">
+
         </div>
     </div>
 </section>
