--- a/konami.html
+++ b/konami.html
@@ -16,6 +16,7 @@
 </section>
 <section class="d-none text-center" id="hiddenSnoop">
     <h1>Too bad.</h1>
+    <h2 class="m-3" id="reset">Click here to try again</h2>
     <div class="d-flex justify-content-center row">
 <!--        <div class="row justify-content-center">-->
 <!--            <img class="resizeDiscoBall rotateDiscoBall180" src="pictures_and_stuff/discoball.gif" alt="Disco Ball">-->
