add css styling for text (borrowed from fossheim.io)

--- a/konami.html
+++ b/konami.html
@@ -15,8 +15,8 @@
     <h1 class="col p-2" style="border: red solid 1px">Input: ⬆ ⬆ ⬇ ⬇ ⬅ ➡ ⬅ ➡ 🅱️ 🅰️ <span id="enter">ENTER</span></h1>
 </section>
 <section class="d-none text-center" id="hiddenSnoop">
-    <h1>Too bad.</h1>
-    <h2 class="m-3" id="reset">Click here to try again</h2>
+    <h1 class="rainbow-text">Too bad.</h1>
+    <h2 class="m-3 rainbow-text" id="reset">Click here to try again</h2>
     <div class="d-flex justify-content-center row">
 <!--        <div class="row justify-content-center">-->
 <!--            <img class="resizeDiscoBall rotateDiscoBall180" src="pictures_and_stuff/discoball.gif" alt="Disco Ball">-->
