--- a/konami.html
+++ b/konami.html
@@ -11,8 +11,8 @@
 </head>
 <body style="height: 100%">
 <section class="d-flex justify-content-center align-items-center row m-5" id="konamiCode">
-    <h2 class="col-4 p-2" style="border: red solid 1px">Want extra lives?</h2>
-    <h2 class="col p-2" style="border: red solid 1px">Input: ⬆ ⬆ ⬇ ⬇ ⬅ ➡ ⬅ ➡ 🅱️ 🅰️ <span id="enter">ENTER</span></h2>
+    <h2 class="col-4 p-2">Want extra lives?</h2>
+    <h2 class="col p-2">Input: ⬆ ⬆ ⬇ ⬇ ⬅ ➡ ⬅ ➡ 🅱️ 🅰️ <span id="enter">ENTER</span></h2>
 </section>
 <section class="d-none text-center" id="hiddenSnoop">
     <h1 class="rainbow-text">Too bad.</h1>
