--- a/my-first-fetch.html
+++ b/my-first-fetch.html
@@ -5,55 +5,59 @@
     <title>Fetch for Far Flung Functionality</title>
 </head>
 <body>
+<div id="disclaimer"></div>
+<label for="drug">Search Drug Reactions</label>
+<input type="text" id="drug">
+<button id="drugSearch">Search</button>
+<p>Note: Doesn't work very well. API call errors unless the drug is DANGEROUS</p>
 <div id="drugs"></div>
 
 <script src="js/keys.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script>
+    let test = '';
+    fetch('https://api.fda.gov/drug/event.json?api_key=' + FDA_key + '&search=' + test)
+        .then(response => response.json())
+        .then(data => {
+            console.log(data.meta.disclaimer)
+            let disclaim = '';
+            disclaim += '<h3>';
+            disclaim += data.meta.disclaimer;
+            disclaim += ' Consult your physician and don\'t make any decisions based off only what you see here.</h3>';
+            $('#disclaimer').html(disclaim)
+        })
     //SO MUCH GLORIOUS DATA!!!
     //DO FETCH STUFF
-    let term = 'Acetaminophen';
     //fetch makes the request
-    //could add together in the address to even further programmatically do this
-    fetch('https://api.fda.gov/drug/event.json?api_key=' + FDA_key + '&search=' + term)
-        //no semicolons until the end because we're chaining
-        .then(response => response.json())
-        //arrow function must have curly braces if you have more than one line of code in the body
-        .then(data => {
-                console.log(data.results[0].patient.drug[0].medicinalproduct)
+    //can add together in the address to even further programmatically query the API
+    $('#drugSearch').click(function () {
+        let term = $('#drug').val();
+        fetch('https://api.fda.gov/drug/event.json?api_key=' + FDA_key + '&search=' + term + '&limit=100')
+            //no semicolons until the end because we're chaining
+            .then(response => response.json())
+            //arrow function must have curly braces if you have more than one line of code in the body
+            .then(data => {
+                console.log(data.results)
                 let html = '';
-                html += '<h2>' + term + '</h2>';
-                html += '<p>' + 'Contained in' + '</p>' + '<ul>';
-            for (let i = 0; i < data.results[0].patient.drug.length; i++) {
-                var includedIn = data.results[0].patient.drug[i].medicinalproduct
-                html += '<li>' + includedIn + '</li>';
-            }
-
-                html += '</ul>';
-
+                html += '<h2>' + 'Reaction to ' + term + '</h2>';
+                //Get and Add Patient Age
+                for (let i = 0; i < 50; i++) {
+                    let age = data.results[i].patient.patientonsetage;
+                    html += '<p>' + 'Patient Age: ' + age + '</p>';
+                    html += '<ul>';
+                    //Get and add drug reactions
+                    for(let r = 0; r < data.results[i].patient.reaction.length; r++){
+                            let reaction = data.results[i].patient.reaction[r].reactionmeddrapt;
+                            html += '<li>' + reaction + '</li>';
+                    }
+                    html += '</ul>';
+                    html += '<br>';
+                }
                 $('#drugs').html(html);
-            });
+            }).catch(e => {console.log(e)});
+    })
 
-    let term2 = 'Cellulose';
-    fetch('https://api.fda.gov/drug/event.json?api_key=' + FDA_key + '&search=' + term2)
-        //no semicolons until the end because we're chaining
-        .then(response => response.json())
-        //arrow function must have curly braces if you have more than one line of code in the body
-        .then(data => {
-            console.log(data.results[0].patient.drug[0].medicinalproduct)
-            let html = '';
-            html += '<h2>' + term2 + '</h2>';
-            html += '<p>' + 'Contained in' + '</p>' + '<ul>';
-            for (let i = 0; i < data.results[0].patient.drug.length; i++) {
-                var includedIn = data.results[0].patient.drug[i].medicinalproduct
-                html += '<li>' + includedIn + '</li>';
-            }
-
-            html += '</ul>';
-
-            $('#drugs').append(html);
-        });
 
 </script>
 
