--- a/weather_map.html
+++ b/weather_map.html
@@ -3,22 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <title>Weather4U</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/weather_map.css">
+    <style>
+        #map {
+            /* the width and height may be set to any size */
+            width: 80%;
+            height: 700px;
+        }
+    </style>
 </head>
 <body>
-<!--<div>-->
-<!--    <label for="latInput">Latitude</label>-->
-<!--    <input type="text" id="latInput">-->
-<!--    <label for="lonInput">Longitude</label>-->
-<!--    <input type="text" id="lonInput">-->
-<!--    <button id="searchLatLon">Search</button>-->
-<!--</div>-->
-<div id="locationName"></div>
-<div id="nextFourDays"></div>
+<h1 class="d-flex justify-content-center mainheader">Weather4U</h1>
+<section class="d-flex justify-content-center">
+    <div id='map' class="d-flex"></div>
+</section>
+<section class="mt-5 d-flex justify-content-center">
+    <div id="locationName" class="d-flex justify-content-center"></div>
+</section>
 
-
+<!--API Keys-->
 <script src="js/keys.js"></script>
+<!--JQuery-->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<!-- Mapbox-->
+<script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
+<!--MapBox JS-->
+<script src="js/weather_map_mapbox.js"></script>
+<!--GeoCoder Utils-->
+<script src="js/geocoder-utils.js"></script>
+<!--Weather Map Script-->
 <script src="js/weather_map.js"></script>
 </body>
 </html>
