add five day forecast functionality and some styling

--- a/weather_map.html
+++ b/weather_map.html
@@ -18,12 +18,17 @@
     </style>
 </head>
 <body>
-<h1 class="d-flex justify-content-center mainheader">Weather4U</h1>
+<div class="d-flex justify-content-center my-5">
+    <img class="weather-logo" src="/pictures_and_stuff/weather4u.png" alt="weather4u's terrible logo">
+</div>
 <section class="d-flex justify-content-center">
     <div id='map' class="d-flex"></div>
 </section>
 <section class="mt-5 d-flex justify-content-center">
     <div id="locationName" class="d-flex justify-content-center"></div>
+</section>
+<section class="mt-5 d-flex">
+    <div id="forecast" class="d-flex justify-content-center row row-cols-2 row-cols-lg-5 g-2 g-lg-3"></div>
 </section>
 
 <!--API Keys-->
