add ability to drag marker

--- a/weather_map.html
+++ b/weather_map.html
@@ -28,7 +28,7 @@
     <h1 class="my-auto fw-bolder ramaraja fst-italic me-4">Is it ugly? Yes. <br> Does it work? Also yes.<span class="text-danger">&trade;</span></h1>
 </div>
 <section class="mt-5 mb-3 d-flex justify-content-center setWidth80 mx-auto">
-    <div id="locationName" class="d-flex justify-content-center"> </div><!--class="d-flex justify-content-center"-->
+    <div id="locationName" class="d-flex justify-content-center shadow-lg"> </div><!--class="d-flex justify-content-center"-->
 </section>
 <section class="d-flex justify-content-center">
     <div id='map' class="d-flex mx-1"></div>
@@ -40,9 +40,9 @@
     </div>
 </section>
 <section class="mt-5 d-flex justify-content-center">
-    <div id="forecast" class="d-flex justify-content-center row row-cols-2 row-cols-lg-5 g-2 g-lg-3"></div>
+    <div id="forecast" class="d-flex justify-content-center row row-cols-2 row-cols-lg-5 g-2 g-lg-3 shadow-lg"></div>
 </section>
-<footer class="mt-4">
+<footer class="mt-4 ms-3">
     <div class="footer-div d-flex">
         <h4 class="align-self-center my-auto">Presented Courtesy of James R. Woodward</h4>
         <img id="github" class="icon my-auto" src="/pictures_and_stuff/github_logo.png" alt="github logo">
